--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:alpine
-WORKDIR /app
-COPY package*.json ./
+WORKDIR '/app'
+COPY ./package.json ./
 RUN npm install
 COPY . .
-EXPOSE 4000
-CMD ["node", "app.js"]
+CMD ["npm", "run", "start"]
 
