--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     volumes:
       - /app/node_modules
       - ./server:/app
+    env_file:
+      - ./server/.env
   client:
     build: 
       dockerfile: Dockerfile
